# python-mlep

./: LICENSE.txt  README.md  pyproject.toml  setup.py
mlep/: __init__.py  mlep_create.py  mlep_decode_packet.py  mlep_encode_real_data.py  mlep_encode_status.py  mlep_error.py  mlep_parse_json.py  mlep_process.py
tests/: conftest.py  test_mlep_process.py  test_version.py
